[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://World/BackGround.png" type="Texture" id=2]
[ext_resource path="res://UI/About.gd" type="Script" id=3]
[ext_resource path="res://UI/vits.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[node name="About" type="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="."]
margin_left = 32.0
margin_top = 256.0
margin_right = 427.0
margin_bottom = 307.0
custom_fonts/font = SubResource( 1 )
text = "Developed By: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VitikaYTButton" type="LinkButton" parent="."]
margin_left = 488.0
margin_top = 256.0
margin_right = 658.0
margin_bottom = 307.0
custom_fonts/font = SubResource( 2 )
text = "Vitika"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vits" type="Sprite" parent="."]
position = Vector2( 456, 264 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="BackButton" type="Button" parent="."]
margin_right = 96.0
margin_bottom = 88.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.458824, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.0196078, 0, 0.266667, 1 )
text = "<<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="."]
margin_left = 208.0
margin_top = 336.0
margin_right = 377.0
margin_bottom = 387.0
custom_fonts/font = SubResource( 1 )
text = "Music: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLink" type="LinkButton" parent="."]
margin_left = 392.0
margin_top = 336.0
margin_right = 512.0
margin_bottom = 387.0
focus_mode = 2
custom_fonts/font = SubResource( 2 )
text = "Link"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VitikaYTButton" to="." method="_on_VitikaYTButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MusicLink" to="." method="_on_MusicLink_pressed"]
